--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,4 @@ node_modules
 **/.idea
 .DS_Store
 **./DS_Store
-/dist/
-/*.log
-/*.lock
-/*.swp
-/.angular
-/angular.json
-/.vscode/
+/.angular/cache
